# DjangoProject

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  google_key.json  heroku.yml  manage.py  pyproject.toml  python.py  runtime.txt
app/: admin.py  apps.py  authentication.py  constant.py  cron.py  exception.py  models.py  resources.py  serializers.py  signals.py  swagger.py  tasks.py  urls.py  utils.py  views.py
app/migrations/: 0001_initial.py  0002_alter_customeruser_email.py  0002_alter_gallery_img.py  0002_auto_20220524_1550.py  0003_alter_customeruser_email.py  0003_alter_product_img_product.py  0003_remove_cartitem_user.py  0004_alter_cartitem_order.py  0004_auto_20220518_0927.py  0004_auto_20220706_1600.py  0005_alter_cartitem_order.py  0005_alter_cartitem_status.py  0005_alter_gallery_product.py  0006_auto_20220707_1118.py  0006_cartitem_user.py  0007_alter_cartitem_order.py  0007_auto_20220707_1718.py  0008_auto_20220525_1012.py  0008_auto_20220720_1020.py  0009_alter_product_price.py  0009_auto_20220721_0914.py  0010_alter_cartitem_product.py  0010_alter_cartitem_status.py  0011_auto_20220721_0921.py  0011_customeruser_code_verify.py  0012_alter_customeruser_code_verify.py  0012_alter_order_user.py  0013_auto_20220721_0955.py  0013_remove_customeruser_code_verify.py  0014_auto_20220721_1041.py  0014_blacklist.py  0015_auto_20220531_0902.py  0016_order_status.py  0017_alter_order_status.py  0018_auto_20220614_1441.py  0019_alter_order_status.py  0020_auto_20220614_1617.py  0021_discount_value_discount.py  0022_auto_20220614_1633.py  0023_alter_product_category.py  (+7 more)
app/serializers/: cartitem.py  discount.py  gallery.py  order.py  pagination.py  product.py  report.py  user.py
app/tests/: category.py  product.py  tests_product.py  tests_user.py  user.py
app/tests/file_tests/: list_product.csv
app/views/: __init__.py  cartritem.py  discount.py  order.py  product.py  report.py  user.py
projectnew/: asgi.py  celery.py  pyproject.toml  settings.py  urls.py  utils.py  wsgi.py
projectnew/app1/: urls.py  views.py
projectnew/projectnew/: .env  settings.py  urls.py
projectnew/user/: models.py  serializers.py  urls.py  views.py
projectnew/user/migrations/: 0001_initial.py  0002_cart_category_product_supplier_order.py  0003_contact.py
templates/: mail.html  mail_reset_password.html
