[tool.poetry]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = ["huan1894380339 <huan.duong@kyanon.digital>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.2"
mysqlclient = "^2.1.0"
djangorestframework = "^3.13.1"
django-environ = "^0.8.1"
psycopg2 = "^2.9.3"
Pillow = "^9.1.0"
django-cors-headers = "^3.12.0"
PyJWT = "^2.3.0"
DateTime = "^4.4"
django-googledrive-storage = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
